Issue 3663: 	too much recursion when logging array contains itself

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -551,13 +551,22 @@
     margin-left: 4px;
 }
 
-/*****************************************************************************************/
+/*************************************************************************************************/
+/* Cycle reference*/
+
+.objectLink-Reference {
+    font-family: monospace;
+    font-weight: bold;
+    color: rgb(102, 102, 255);
+}
+
+/*************************************************************************************************/
 
 .logRow-dir {
     padding: 0;
 }
 
-/************************************************************************************************/
+/*************************************************************************************************/
 
 .logRow-errorMessage > .hasTwisty > .errorTitle,
 .logRow-spy .spyHead .spyTitle,
